--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
     - name: snapcraft
       channel: stable
       confinement: classic
+    - name: lxd
+      channel: stable
 
 script:
   - sudo usermod --append --groups lxd $USER
