--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ matrix:
       - linux
 
     rvm:
-      # - jruby
-      # - "2.4"
-      # - "2.5"
-      # - "2.6"
+      - jruby
+      - "2.4"
+      - "2.5"
+      - "2.6"
       - "2.7"
 
     jobs:
@@ -63,7 +63,6 @@ matrix:
       - sudo /snap/bin/lxd.migrate -yes
       - sudo /snap/bin/lxd waitready
       - sudo /snap/bin/lxd init --auto
-      - 'if [ -n "$SOURCE_TAG" ]; then sed -i "s/source-branch.*/source-tag: $SOURCE_TAG/" snap/snapcraft.yaml ; fi'
       - sg lxd -c snapcraft
 
     after_failure:
